ajustes de icone e responsividade

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matheus Brito - Portfólio</title>
-
+    
+    <link rel="icon" href="img/flavicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&display=swap" rel="stylesheet">
@@ -46,32 +47,36 @@
 
         <section id="sobre">
             <div class="sobre-container">
+
                 <div class="coluna-esquerda">
-                    <img src="img/foto-perfil.png" alt="Foto de Matheus Brito" class="foto-perfil-sobre">
-                    <h3 data-key="titulo_habilidades">Habilidades</h3>
-                    <div class="habilidades-container">
-                        <div class="skill">
-                            <img src="img/SQL logo.png" alt="SQL Logo" title="SQL">
-                            <span>SQL</span>
-                        </div>
-                        <div class="skill">
-                            <img src="img/Power Bi - logo.png" alt="Power BI Logo" title="Power BI">
-                            <span>Power BI</span>
-                        </div>
-                        <div class="skill">
-                            <img src="img/python logo.png" alt="Python Logo" title="Python">
-                            <span>Python</span>
-                        </div>
-                        <div class="skill">
-                            <i class="fa-solid fa-arrows-rotate" title="ETL"></i>
-                            <span>ETL</span>
-                        </div>
-                        <div class="skill">
-                            <img src="img/Microsoft-365-logo.svg" alt="Office 365 logo" title="Office 365">
-                            <span>Office 365</span>
+                    <div class="info-pessoal-card">
+                        <img src="img/foto-perfil.png" alt="Foto de Matheus Brito" class="foto-perfil-sobre">
+                        <h3 data-key="titulo_habilidades">Habilidades</h3>
+                        <div class="habilidades-container">
+                            <div class="skill">
+                                <img src="img/SQL logo.png" alt="SQL Logo" title="SQL">
+                                <span>SQL</span>
+                            </div>
+                            <div class="skill">
+                                <img src="img/Power Bi - logo.png" alt="Power BI Logo" title="Power BI">
+                                <span>Power BI</span>
+                            </div>
+                            <div class="skill">
+                                <img src="img/python logo.png" alt="Python Logo" title="Python">
+                                <span>Python</span>
+                            </div>
+                            <div class="skill">
+                                <i class="fa-solid fa-arrows-rotate" title="ETL"></i>
+                                <span>ETL</span>
+                            </div>
+                            <div class="skill">
+                                <img src="img/Microsoft-365-logo.svg" alt="Office 365 logo" title="Office 365">
+                                <span>Office 365</span>
+                            </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="coluna-direita">
                     <h2 data-key="titulo_sobre_mim">Sobre mim</h2>
                     <ul class="info-lista">
@@ -145,7 +150,7 @@
             <h2 data-key="titulo_projetos">Meus Projetos</h2>
             <div class="container-projetos">
                 <div class="cartao-projeto">
-                    <img src="img/visão-geral_NBA.png" alt="Dashboard da NBA">
+                    <img src="img/análise_bivariada.png" alt="Dashboard da NBA">
                     <h3 data-key="proj1_titulo">Análise de Dados Históricos da NBA</h3>
                     <p data-key="proj1_desc">Dashboard interativo que analisa a evolução dos jogadores da NBA e a correlação entre altura e performance.</p>
                     <div class="project-tech-logos">
@@ -182,41 +187,37 @@
                 <h2 data-key="titulo_recomendacoes">Recomendações</h2>
                 <div class="linha-decorativa"></div>
                 <div class="recomendacoes-container">
-
-    <div class="recomendacao-item">
-        <a href="https://www.linkedin.com/in/roberta-pereira-de-souza-1926452a9/" target="_blank" class="recomendacao-link">
-            <img src="img/foto-perfil-Roberta.jpg" alt="Foto de Roberta Pereira de Souza">
-            <h4>Roberta Pereira de Souza</h4>
-        </a>
-        <span class="recomendacao-titulo" data-key="rec1_titulo">Coordenadora de TI no Banco Bradesco</span>
-        <blockquote class="recomendacao-texto" data-key="rec1_texto">
-            "Sua determinação, vontade de participar e ajudar as pessoas é o seu ‘pulo do gato’ que vai te levar a uma trajetória de sucesso profissional com toda certeza. Um profissional com um talento inegável e valores que transbordam."
-        </blockquote>
-    </div>
-
-    <div class="recomendacao-item">
-        <a href="https://www.linkedin.com/in/gabriela-b-316b2897/" target="_blank" class="recomendacao-link">
-            <img src="img/foto-perfil-Gabi.jpg" alt="Foto de Gabriela Borges">
-            <h4>Gabriela Borges</h4>
-        </a>
-        <span class="recomendacao-titulo" data-key="rec2_titulo">Analista de Operações no Banco Bradesco</span>
-        <blockquote class="recomendacao-texto" data-key="rec2_texto">
-            "Você é excepcional e vai longe! Um profissional muito inteligente e um ser humano com uma energia, educação e posicionamentos admiráveis. Você merece o mundo."
-        </blockquote>
-    </div>
-
-    <div class="recomendacao-item">
-        <a href="https://www.linkedin.com/in/matheus-n%C3%B3brega-de-abreu-9867801aa/" target="_blank" class="recomendacao-link">
-            <img src="img/foto-perfil-Matheus.jpg" alt="Foto de Matheus Nóbrega">
-            <h4>Matheus Nóbrega</h4>
-        </a>
-        <span class="recomendacao-titulo" data-key="rec3_titulo">Auditor de Tecnologia da Informação no Banco Bradesco</span>
-        <blockquote class="recomendacao-texto" data-key="rec3_texto">
-            "Conheço o Matheus há mais de uma década e sua essência sempre foi a mesma: uma combinação impressionante de disciplina, garra e resiliência. Essas qualidades, unidas à sua competência técnica e notável capacidade de aprendizado, são a fórmula do seu sucesso profissional."
-        </blockquote>
-    </div>
-
-</div>
+                    <div class="recomendacao-item">
+                        <a href="https://www.linkedin.com/in/roberta-pereira-de-souza-1926452a9/" target="_blank" rel="noopener noreferrer" class="recomendacao-link">
+                            <img src="img/foto-perfil-Roberta.jpg" alt="Foto de Roberta Pereira de Souza">
+                            <h4>Roberta Pereira de Souza</h4>
+                        </a>
+                        <span class="recomendacao-titulo" data-key="rec1_titulo">Coordenadora de TI no Banco Bradesco</span>
+                        <blockquote class="recomendacao-texto" data-key="rec1_texto">
+                            "Sua determinação, vontade de participar e ajudar as pessoas é o seu ‘pulo do gato’ que vai te levar a uma trajetória de sucesso profissional com toda certeza. Um profissional com um talento inegável e valores que transbordam."
+                        </blockquote>
+                    </div>
+                    <div class="recomendacao-item">
+                        <a href="https://www.linkedin.com/in/gabriela-b-316b2897/" target="_blank" rel="noopener noreferrer" class="recomendacao-link">
+                            <img src="img/foto-perfil-Gabi.jpg" alt="Foto de Gabriela Borges">
+                            <h4>Gabriela Borges</h4>
+                        </a>
+                        <span class="recomendacao-titulo" data-key="rec2_titulo">Analista de Operações no Banco Bradesco</span>
+                        <blockquote class="recomendacao-texto" data-key="rec2_texto">
+                            "Você é excepcional e vai longe! Um profissional muito inteligente e um ser humano com uma energia, educação e posicionamentos admiráveis. Você merece o mundo."
+                        </blockquote>
+                    </div>
+                    <div class="recomendacao-item">
+                        <a href="https://www.linkedin.com/in/matheus-n%C3%B3brega-de-abreu-9867801aa/" target="_blank" rel="noopener noreferrer" class="recomendacao-link">
+                            <img src="img/foto-perfil-Matheus.jpg" alt="Foto de Matheus Nóbrega">
+                            <h4>Matheus Nóbrega</h4>
+                        </a>
+                        <span class="recomendacao-titulo" data-key="rec3_titulo">Auditor de Tecnologia da Informação no Banco Bradesco</span>
+                        <blockquote class="recomendacao-texto" data-key="rec3_texto">
+                            "Conheço o Matheus há mais de uma década e sua essência sempre foi a mesma: uma combinação impressionante de disciplina, garra e resiliência. Essas qualidades, unidas à sua competência técnica e notável capacidade de aprendizado, são a fórmula do seu sucesso profissional."
+                        </blockquote>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -232,9 +233,12 @@
             <a href="https://linkedin.com/in/matheus-britosilva" target="_blank" title="LinkedIn">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
+            <a href="https://github.com/MatheusBrito2" target="_blank" title="GitHub">
+                <i class="fa-brands fa-github"></i>
+            </a>
         </div>
         <div class="copyright" data-key="copyright">
-            &copy; 2025 Matheus Brito. Todos os direitos reservados.
+            &copy; 2024 Matheus Brito. Todos os direitos reservados.
         </div>
     </footer>
 
@@ -266,8 +270,8 @@
                 'titulo_habilidades': 'Habilidades',
                 'titulo_sobre_mim': 'Sobre mim',
                 'info_nome': 'Nome:',
-                'info_perfil_valor': 'Analista de Dados',
                 'info_perfil': 'Perfil:',
+                'info_perfil_valor': 'Analista de Dados',
                 'btn_cv': 'Download CV',
                 'p1_sobre_mim': 'Como <strong>Analista de Dados</strong>, foco em transformar dados em insights estratégicos. Tenho sólidas habilidades em <strong>SQL</strong> para integração, limpeza e modelagem de dados, na criação de dashboards interativos com <strong>Power BI</strong> e <strong>DAX</strong> para análise de KPIs operacionais e comerciais, e no uso de <strong>Python</strong> (com Pandas e NumPy) para automatizar tarefas e consolidar relatórios gerenciais.',
                 'p2_sobre_mim': 'No Banco Bradesco, um dos meus principais projetos foi a criação de um dashboard estratégico para o controle de metas da diretoria, que se tornou uma ferramenta essencial para a tomada de decisões. Na frente operacional, minha contribuição foi construir painéis analíticos que cruzavam informações de diversas bases de dados, transformando dados brutos em KPIs acionáveis para a otimização e o monitoramento dos processos. Complementarmente, desenvolvi um aplicativo em Power Apps para o monitoramento de SLAs em tempo real e atuei no suporte a auditorias de sistemas, extraindo e analisando logs para a investigação de falhas.',
@@ -321,20 +325,20 @@
                 'titulo_habilidades': 'Skills',
                 'titulo_sobre_mim': 'About me',
                 'info_nome': 'Name:',
-                'info_perfil_valor': 'Data Analyst',
                 'info_perfil': 'Profile:',
+                'info_perfil_valor': 'Data Analyst',
                 'btn_cv': 'Download CV',
                 'p1_sobre_mim': 'As a <strong>Data Analyst</strong>, I focus on turning data into strategic insights. I have solid skills in <strong>SQL</strong> for data integration, cleaning, and modeling; creating interactive dashboards with <strong>Power BI</strong> and <strong>DAX</strong> for analyzing operational and commercial KPIs; and using <strong>Python</strong> (with Pandas and NumPy) to automate tasks and consolidate management reports.',
                 'p2_sobre_mim': 'At Banco Bradesco, one of my main projects was creating a strategic dashboard to monitor executive goals, which became an essential tool for decision-making. On the operational front, I built analytical panels that crossed information from various databases, transforming raw data into actionable KPIs for process optimization and monitoring. Additionally, I developed a Power Apps application for real-time SLA monitoring and supported system audits by extracting and analyzing logs to investigate failures.',
                 'titulo_curriculo': 'My Resume',
                 'subtitulo_formacao': 'Education',
                 'formacao1_titulo': 'Technologist in Systems Analysis and Development',
-                'formacao1_data': 'January/2023 - June/2025',
+                'formacao1_data': 'January 2023 - June 2025',
                 'formacao2_titulo': 'IT Technician',
-                'formacao2_data': 'January/2020 - December/2022',
+                'formacao2_data': 'January 2020 - December 2022',
                 'subtitulo_experiencia': 'Professional Experience',
                 'exp1_titulo': 'Data Analyst Intern',
-                'exp1_data': 'August/2023 - Present',
+                'exp1_data': 'August 2023 - Present',
                 'exp1_li1': 'Creation of interactive dashboards in Power BI, applying DAX for KPI analysis.',
                 'exp1_li2': 'Integration, cleaning, and modeling of data in SQL Server for report automation.',
                 'exp1_li3': 'Development of Python scripts to automate tasks and consolidate spreadsheets.',
@@ -376,20 +380,20 @@
                 'titulo_habilidades': 'Habilidades',
                 'titulo_sobre_mim': 'Sobre mí',
                 'info_nome': 'Nombre:',
-                'info_perfil_valor': 'Analista de Datos',
                 'info_perfil': 'Perfil:',
+                'info_perfil_valor': 'Analista de Datos',
                 'btn_cv': 'Descargar CV',
                 'p1_sobre_mim': 'Como <strong>Analista de Datos</strong>, me enfoco en transformar datos en insights estratégicos. Tengo sólidas habilidades en <strong>SQL</strong> para la integración, limpieza y modelado de datos; creando dashboards interactivos con <strong>Power BI</strong> y <strong>DAX</strong> para el análisis de KPIs operativos y comerciales; y usando <strong>Python</strong> (con Pandas y NumPy) para automatizar tareas y consolidar informes de gestión.',
                 'p2_sobre_mim': 'En Banco Bradesco, uno de mis principales proyectos fue la creación de un dashboard estratégico para monitorear metas ejecutivas, que se convirtió en una herramienta esencial para la toma de decisiones. En el frente operativo, construí paneles analíticos que cruzaban información de diversas bases de datos, transformando datos brutos en KPIs accionables para la optimización y monitoreo de procesos. Adicionalmente, desarrollé una aplicación en Power Apps para el monitoreo de SLAs en tiempo real y apoyé en auditorías de sistemas, extrayendo y analizando logs para investigar fallos.',
                 'titulo_curriculo': 'Mi Currículum',
                 'subtitulo_formacao': 'Formación Académica',
                 'formacao1_titulo': 'Tecnólogo en Análisis y Desarrollo de Sistemas',
-                'formacao1_data': 'Enero/2023 - Junio/2025',
+                'formacao1_data': 'Enero 2023 - Junio 2025',
                 'formacao2_titulo': 'Técnico en Informática',
-                'formacao2_data': 'Enero/2020 - Diciembre/2022',
+                'formacao2_data': 'Enero 2020 - Diciembre 2022',
                 'subtitulo_experiencia': 'Experiencia Profesional',
                 'exp1_titulo': 'Pasante de Analista de Datos',
-                'exp1_data': 'Agosto/2023 - Actualidad',
+                'exp1_data': 'Agosto 2023 - Actualidad',
                 'exp1_li1': 'Creación de dashboards interactivos en Power BI, aplicando DAX para análisis de KPIs.',
                 'exp1_li2': 'Integración, limpieza y modelado de datos en SQL Server para la automatización de informes.',
                 'exp1_li3': 'Desarrollo de scripts en Python para automatizar tareas y consolidar hojas de cálculo.',
@@ -415,7 +419,7 @@
                 'rec2_titulo': 'Analista de Operaciones en Banco Bradesco',
                 'rec2_texto': '"¡Eres excepcional y llegarás lejos! Un profesional muy inteligente y un ser humano con una energía, educación y posturas admirables. Te mereces el mundo."',
                 'rec3_titulo': 'Auditor de Tecnologías de la Información en Banco Bradesco',
-                'rec3_texto': '"Conozco a Matheus desde hace más de una década y su esencia siempre ha sido la misma: una combinación impresionante de disciplina, garra y resiliencia. Estas cualidades, unidas a su competencia técnica y notable capacidad de aprendizaje, son la fórmula de su éxito profesional.',
+                'rec3_texto': '"Conozco a Matheus desde hace más de una década y su esencia siempre ha sido la misma: una combinación impresionante de disciplina, garra y resiliencia. Estas cualidades, unidas a su competencia técnica y notable capacidad de aprendizaje, son la fórmula de su éxito profesional."',
                 'titulo_contato': 'Contacto',
                 'p_contato': 'Puedes encontrarme en las siguientes redes:',
                 'copyright': '&copy; 2025 Matheus Brito. Todos los derechos reservados.'
@@ -425,17 +429,16 @@
         const changeLanguage = (lang) => {
             document.querySelectorAll('[data-key]').forEach(element => {
                 const key = element.getAttribute('data-key');
-                if (translations[lang] && translations[lang][key]) {
-                    element.innerHTML = translations[lang][key];
+                const translation = translations[lang] && translations[lang][key];
+                if (translation) {
+                    element.innerHTML = translation;
                 }
             });
-            // Salva o idioma escolhido no armazenamento local
             localStorage.setItem('language', lang);
         };
         
-        // Verifica se há um idioma salvo e aplica ao carregar a página
         document.addEventListener('DOMContentLoaded', () => {
-            const savedLanguage = localStorage.getItem('language') || 'pt'; // 'pt' como padrão
+            const savedLanguage = localStorage.getItem('language') || 'pt';
             changeLanguage(savedLanguage);
         });
 
