--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
             <a href="https://linkedin.com/in/matheus-britosilva" target="_blank" title="LinkedIn">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
+            <a href="https://wa.link/njllw3" target="_blank" title="WhatsApp">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
         </div>
         <div class="copyright" data-key="copyright">
             &copy; 2025 Matheus Brito. Todos os direitos reservados.
